core/src/main/java/de/dfki/lt/tr/dialogue/cplan/LFParser.output
Terminals unused in grammar

   VAR
   GVAR
   COMPARISON
   ARROW


Grammar

    0 $accept: start $end

    1 start: lf
    2      | rawlf
    3      | error

    4 lf: '@' ID ':' ID '(' lfconj ')'
    5   | '@' ID '(' lfconj ')'
    6   | '(' lfconj ')'

    7 lfconj: lfterm '^' lfconj
    8       | lfterm

    9 lfterm: '<' ID '>' '(' lfconj ')'
   10       | '<' ID '>' ID
   11       | '<' ID '>' STRING
   12       | '<' ID '>' ID ':' ID
   13       | '<' ID '>' ID ':'
   14       | ID ':' ID
   15       | ID ':'
   16       | ':' ID
   17       | ID

   18 rawlf: ID '(' ID keyval ')'

   19 keyval: ',' ID '=' STRING keyval
   20       | ',' ID '=' ID keyval
   21       | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 5 6 9 18
')' (41) 4 5 6 9 18
',' (44) 19 20
':' (58) 4 12 13 14 15 16
'<' (60) 9 10 11 12 13
'=' (61) 19 20
'>' (62) 9 10 11 12 13
'@' (64) 4 5
'^' (94) 7
error (256) 3
ID (258) 4 5 9 10 11 12 13 14 15 16 17 18 19 20
VAR (259)
GVAR (260)
COMPARISON (261)
ARROW (262)
STRING (263) 11 19


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
start (19)
    on left: 1 2 3, on right: 0
lf (20)
    on left: 4 5 6, on right: 1
lfconj (21)
    on left: 7 8, on right: 4 5 6 7 9
lfterm (22)
    on left: 9 10 11 12 13 14 15 16 17, on right: 7 8
rawlf (23)
    on left: 18, on right: 2
keyval (24)
    on left: 19 20 21, on right: 18 19 20


State 0

    0 $accept: . start $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    '@'    shift, and go to state 3
    '('    shift, and go to state 4

    start  go to state 5
    lf     go to state 6
    rawlf  go to state 7


State 1

    3 start: error .

    $default  reduce using rule 3 (start)


State 2

   18 rawlf: ID . '(' ID keyval ')'

    '('  shift, and go to state 8


State 3

    4 lf: '@' . ID ':' ID '(' lfconj ')'
    5   | '@' . ID '(' lfconj ')'

    ID  shift, and go to state 9


State 4

    6 lf: '(' . lfconj ')'

    ID   shift, and go to state 10
    ':'  shift, and go to state 11
    '<'  shift, and go to state 12

    lfconj  go to state 13
    lfterm  go to state 14


State 5

    0 $accept: start . $end

    $end  shift, and go to state 15


State 6

    1 start: lf .

    $default  reduce using rule 1 (start)


State 7

    2 start: rawlf .

    $default  reduce using rule 2 (start)


State 8

   18 rawlf: ID '(' . ID keyval ')'

    ID  shift, and go to state 16


State 9

    4 lf: '@' ID . ':' ID '(' lfconj ')'
    5   | '@' ID . '(' lfconj ')'

    ':'  shift, and go to state 17
    '('  shift, and go to state 18


State 10

   14 lfterm: ID . ':' ID
   15       | ID . ':'
   17       | ID .

    ':'  shift, and go to state 19

    $default  reduce using rule 17 (lfterm)


State 11

   16 lfterm: ':' . ID

    ID  shift, and go to state 20


State 12

    9 lfterm: '<' . ID '>' '(' lfconj ')'
   10       | '<' . ID '>' ID
   11       | '<' . ID '>' STRING
   12       | '<' . ID '>' ID ':' ID
   13       | '<' . ID '>' ID ':'

    ID  shift, and go to state 21


State 13

    6 lf: '(' lfconj . ')'

    ')'  shift, and go to state 22


State 14

    7 lfconj: lfterm . '^' lfconj
    8       | lfterm .

    '^'  shift, and go to state 23

    $default  reduce using rule 8 (lfconj)


State 15

    0 $accept: start $end .

    $default  accept


State 16

   18 rawlf: ID '(' ID . keyval ')'

    ','  shift, and go to state 24

    $default  reduce using rule 21 (keyval)

    keyval  go to state 25


State 17

    4 lf: '@' ID ':' . ID '(' lfconj ')'

    ID  shift, and go to state 26


State 18

    5 lf: '@' ID '(' . lfconj ')'

    ID   shift, and go to state 10
    ':'  shift, and go to state 11
    '<'  shift, and go to state 12

    lfconj  go to state 27
    lfterm  go to state 14


State 19

   14 lfterm: ID ':' . ID
   15       | ID ':' .

    ID  shift, and go to state 28

    $default  reduce using rule 15 (lfterm)


State 20

   16 lfterm: ':' ID .

    $default  reduce using rule 16 (lfterm)


State 21

    9 lfterm: '<' ID . '>' '(' lfconj ')'
   10       | '<' ID . '>' ID
   11       | '<' ID . '>' STRING
   12       | '<' ID . '>' ID ':' ID
   13       | '<' ID . '>' ID ':'

    '>'  shift, and go to state 29


State 22

    6 lf: '(' lfconj ')' .

    $default  reduce using rule 6 (lf)


State 23

    7 lfconj: lfterm '^' . lfconj

    ID   shift, and go to state 10
    ':'  shift, and go to state 11
    '<'  shift, and go to state 12

    lfconj  go to state 30
    lfterm  go to state 14


State 24

   19 keyval: ',' . ID '=' STRING keyval
   20       | ',' . ID '=' ID keyval

    ID  shift, and go to state 31


State 25

   18 rawlf: ID '(' ID keyval . ')'

    ')'  shift, and go to state 32


State 26

    4 lf: '@' ID ':' ID . '(' lfconj ')'

    '('  shift, and go to state 33


State 27

    5 lf: '@' ID '(' lfconj . ')'

    ')'  shift, and go to state 34


State 28

   14 lfterm: ID ':' ID .

    $default  reduce using rule 14 (lfterm)


State 29

    9 lfterm: '<' ID '>' . '(' lfconj ')'
   10       | '<' ID '>' . ID
   11       | '<' ID '>' . STRING
   12       | '<' ID '>' . ID ':' ID
   13       | '<' ID '>' . ID ':'

    ID      shift, and go to state 35
    STRING  shift, and go to state 36
    '('     shift, and go to state 37


State 30

    7 lfconj: lfterm '^' lfconj .

    $default  reduce using rule 7 (lfconj)


State 31

   19 keyval: ',' ID . '=' STRING keyval
   20       | ',' ID . '=' ID keyval

    '='  shift, and go to state 38


State 32

   18 rawlf: ID '(' ID keyval ')' .

    $default  reduce using rule 18 (rawlf)


State 33

    4 lf: '@' ID ':' ID '(' . lfconj ')'

    ID   shift, and go to state 10
    ':'  shift, and go to state 11
    '<'  shift, and go to state 12

    lfconj  go to state 39
    lfterm  go to state 14


State 34

    5 lf: '@' ID '(' lfconj ')' .

    $default  reduce using rule 5 (lf)


State 35

   10 lfterm: '<' ID '>' ID .
   12       | '<' ID '>' ID . ':' ID
   13       | '<' ID '>' ID . ':'

    ':'  shift, and go to state 40

    $default  reduce using rule 10 (lfterm)


State 36

   11 lfterm: '<' ID '>' STRING .

    $default  reduce using rule 11 (lfterm)


State 37

    9 lfterm: '<' ID '>' '(' . lfconj ')'

    ID   shift, and go to state 10
    ':'  shift, and go to state 11
    '<'  shift, and go to state 12

    lfconj  go to state 41
    lfterm  go to state 14


State 38

   19 keyval: ',' ID '=' . STRING keyval
   20       | ',' ID '=' . ID keyval

    ID      shift, and go to state 42
    STRING  shift, and go to state 43


State 39

    4 lf: '@' ID ':' ID '(' lfconj . ')'

    ')'  shift, and go to state 44


State 40

   12 lfterm: '<' ID '>' ID ':' . ID
   13       | '<' ID '>' ID ':' .

    ID  shift, and go to state 45

    $default  reduce using rule 13 (lfterm)


State 41

    9 lfterm: '<' ID '>' '(' lfconj . ')'

    ')'  shift, and go to state 46


State 42

   20 keyval: ',' ID '=' ID . keyval

    ','  shift, and go to state 24

    $default  reduce using rule 21 (keyval)

    keyval  go to state 47


State 43

   19 keyval: ',' ID '=' STRING . keyval

    ','  shift, and go to state 24

    $default  reduce using rule 21 (keyval)

    keyval  go to state 48


State 44

    4 lf: '@' ID ':' ID '(' lfconj ')' .

    $default  reduce using rule 4 (lf)


State 45

   12 lfterm: '<' ID '>' ID ':' ID .

    $default  reduce using rule 12 (lfterm)


State 46

    9 lfterm: '<' ID '>' '(' lfconj ')' .

    $default  reduce using rule 9 (lfterm)


State 47

   20 keyval: ',' ID '=' ID keyval .

    $default  reduce using rule 20 (keyval)


State 48

   19 keyval: ',' ID '=' STRING keyval .

    $default  reduce using rule 19 (keyval)
